ui/css/main.css
/* ... */
.networkswitch_vlanpanel {
	width:464px;
	height:auto;
	float:left;
	margin:35px 0 0 16px;
	display:inline;
	padding:0;
}

.networkswitch_vlanadd {
	width:446px;
	height:12px;
	float:left;
	background:url(../images/vlan_add.gif) no-repeat top left;
	margin:26px 0 0 218px;
	display:inline;
	padding:0;
}



.networkswitch_vlan_addbutton {
	width:149px;
	height:24px;
	float:left;
	background:url(../images/add_vlanbutton.png) no-repeat top left;
	margin:-5px 0 0 30px;
	display:inline;
	padding:0;
	cursor:pointer;
	cursor:hand;
}

.networkswitch_vlan_addbutton:hover {
	background:url(../images/add_vlanbutton_hover.png) no-repeat top left;
}

.networkswitch_vlanconnect {
	width:464px;
	height:12px;
	float:left;
	position:relative;
	background:url(../images/vlan_connect.gif) no-repeat top left;
	margin:26px 0 0 0;
	padding:0;
}

.networkswitch_infodropdown {
	width:270px;
	height:auto;
	background:#FFF;
	border:1px solid #999;
	position:absolute;
	top:5px;
	left:20px;
	margin:0;
	padding:0 0 10px 0;
	z-index:1005;
}

.networkswitch_infodropdown_textbox {
	width:250px;
	height:auto;
	float:left;
	margin:0 0 0 10px;
	display:inline;
	padding:0;
}

.networkswitch_infodropdown_actionbox {
	width:262px;
	height:auto;
	float:left;
	margin:5px 0 0 0;
	display:inline;
	padding:0;
}

.networkswitch_infodropdown_actionbox a {
	float:right;
	color:#2c8bbc;
	font-size:10px;
	font-weight:normal;
	text-align:left;
	margin:0 7px 0 0;
	padding:0;
	text-decoration:none;
}

.networkswitch_infodropdown_actionbox a:link, .networkswitch_infodropdown_actionbox a:visited {
	text-decoration:none;
	
}

.networkswitch_infodropdown_actionbox a:hover {
	text-decoration:underline;
}
.networkswitch_infodropdown_textbox li{
	width:250px;
	height:auto;
	float:left;
	margin:10px 0 0 0;
	color:#333;
	font-size:11px;
	font-weight:bold;
	list-style:none;
	display:inline;
	padding:0;
}

.networkswitch_infodropdown_textbox_label {
	width:60px;
	height:auto;
	float:left;
	font-weight:normal;
	margin:1px 0 0 0;
	padding:0;
}

.networkswitch_vlan_infoicon {
	width:12px;
	height:15px;
	float:left;
	background:url(../images/networkswitch_infoicon.gif) no-repeat top left;
	margin:-12px 0 0 10px;
	display:inline;
	padding:0;
	cursor:pointer;
	cursor:hand;
}

.networkswitch_vlan_infoicon:hover {
	background:url(../images/networkswitch_infoicon_hover.gif) no-repeat top left;
}

.networkswitch_vlan_detailsbox {
	width:230px;
	height:auto;
	float:left;
	background:#e9e9e9 url(../images/networkswitch_detailsbox.gif) repeat-x top left;
	border-top:2px solid #d1d1d1;
	border-right:2px solid #d1d1d1;
	border-left:1px solid #dedede;
	border-bottom:1px solid #dedede;
	margin:-20px 0 0 20px;
	display:inline;
	padding:0 0 8px 0;
}

.networkswitch_vlan_detailsbox_textbox {
	width:225px;
	height:auto;
	float:left;
	margin:6px 0 0 5px;
	padding:0;
}

.networkswitch_vlan_detailsbox_textbox_label {
	width:60px;
	height:auto;
	float:left;
	color:#333;
	font-size:11px;
	font-weight:normal;
	text-align:left;
	margin:0;
	padding:0;
}




.networkswitch_vlan_detailsbox_textbox span {
	width:auto;
	height:auto;
	float:left;
	color:#09426e;
	font-size:11px;
	font-weight:bold;
	text-align:left;
	margin:-1px 0 0 0;
	padding:0;
}



.networkswitch_typeicon {
	width:45px;
	height:21px;
	float:left;
	margin:-22px 0 0 37px;
	padding:0;
}

.networkswitch_typeicon.direct {
	background:url(../images/networkswitch_directicon.gif) no-repeat top left;
}

.networkswitch_typeicon.virtual {
	background:url(../images/networkswitch_virtualicon.gif) no-repeat top left;
}

.networkswitch_closeicon{
	width:12px;
	height:12px;
	float:left;
	background:url(../images/search_closeicon_hover.gif) no-repeat top left;
	margin:0 0 0 0;
	padding:0;
	cursor:hand;
	cursor:pointer;
}

.networkswitch_closeicon:hover{
	background:url(../images/search_closeicon.gif) no-repeat top left;
}


.networkswitch_end {
	width:43px;
	height:54px;
	float:right;
	background:url(../images/switch_end.gif) no-repeat top left;
	margin:0 18px 0 0;
	display:inline;
	padding:0;
}

.resource_titlebox {
	width:95%;
	height:auto;
	float:left;
	margin:5px 0 0 10px;
	padding:0;
}

.resource_titlebox h2{
	width:90%;
	height:auto;
	float:left;
	color:#333;
	font-size:15px;
	font-weight:bold;
	text-align:left;
	margin:4px 0 0 0;
	padding:0;
}

.resource_titlebox span{
	width:auto;
	height:auto;
	float:left;
	color:#999;
	font-size:11px;
	font-weight:bold;
	text-align:left;
	margin:3px 5px 0 0;
	padding:0;
}

.resources_totalbg {
	width:58px;
	height:32px;
	float:left;
	background:url(../images/resources_totalbg.png) no-repeat top left;
	margin:6px 0 0 30px;
	display:inline;
	padding:0;
}

.resources_totalbg p {
	width:50px;
	height:auto;
	float:left;
	text-align:center;
	font-size:16px;
	font-weight:bold;
	color:#FFF;
	margin:8px 0 0 4px;
	padding:0;
	display:inline;
}

.resadd_button {
	width:17px;
	height:17px;
	float:left;
	background:url(../images/add_button.png) no-repeat top left;
	margin:13px 0 0 20px;
	padding:0;
	cursor:pointer;
	cursor:hand;
}

.resadd_button:hover {
	background:url(../images/add_button_hover.png) no-repeat top left;
}

/* 2010-10-10 */

.adding_loading {
	width:100%;
	float:left;
	margin:0;
	padding:0;
	background: #e7f7fc repeat-x top left;
	border-bottom:1px solid #e8e8e8;	
}

.adding_animation {
	width:16px;
	height:16px;
	margin:3px 0 0 10px;
	float:left;
	display:inline;
	background:url(../images/ajax-loader.gif) no-repeat top left;
}

.adding_text {
	width:auto;
	height:auto;
	float:left;
	margin:8px 0 0 10px;
	display:inline;
	color:#333;
	font-size:11px;
	font-weight:bold;
}


/* zonetree (begin) */

.zonetree_contentbox {
	width:220px;
	height:auto;
	float:left;
	margin:0 0 0 0;
	padding:0;
}

.zonetree_contentbox p {
	width:auto;
	height:auto;
	float:left;
	text-align:left;
	margin:5px 0 0 10px;
	padding:0;
	font-size:12px;
	font-weight:bold;
}

.zonetree_addbox {
	width:510px;
	height:25px;
	float:left;
	margin:0 0 5px 0;
	padding:0;
}
/* ... */

